@@ -1,21 +1,14 @@
+#!/bin/sh
+
+cat <<DIRS
 usr/share/grass70/gui/icons  usr/lib/grass70/gui/icons
 usr/share/grass70/gui/images usr/lib/grass70/gui/images
+DIRS
 
-usr/share/grass70/gui/wxpython/animation/wxGUI_animation_tool.jpg       usr/lib/grass70/gui/wxpython/animation/wxGUI_animation_tool.jpg
-usr/share/grass70/gui/wxpython/dbmgr/dbmgr_frame.jpg                    usr/lib/grass70/gui/wxpython/dbmgr/dbmgr_frame.jpg
-usr/share/grass70/gui/wxpython/gmodeler/gmodeler_frame.png              usr/lib/grass70/gui/wxpython/gmodeler/gmodeler_frame.png
-usr/share/grass70/gui/wxpython/iclass/iclass_frame.jpg                  usr/lib/grass70/gui/wxpython/iclass/iclass_frame.jpg
-usr/share/grass70/gui/wxpython/mapswipe/mapswipe_tsunami.jpg            usr/lib/grass70/gui/wxpython/mapswipe/mapswipe_tsunami.jpg
-usr/share/grass70/gui/wxpython/psmap/psmap_frame.jpg                    usr/lib/grass70/gui/wxpython/psmap/psmap_frame.jpg
-usr/share/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_1.png            usr/lib/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_1.png
-usr/share/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_2.png            usr/lib/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_2.png
-usr/share/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_3.png            usr/lib/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_3.png
-usr/share/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_4.png            usr/lib/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_4.png
-usr/share/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_5.png            usr/lib/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_5.png
-usr/share/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_6.png            usr/lib/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_6.png
-usr/share/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_7.png            usr/lib/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_7.png
-usr/share/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_8.png            usr/lib/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_8.png
-usr/share/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_sample_areas.png usr/lib/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_sample_areas.png
-usr/share/grass70/gui/wxpython/timeline/timeline_2D.jpg                 usr/lib/grass70/gui/wxpython/timeline/timeline_2D.jpg
-usr/share/grass70/gui/wxpython/tplot/tplot.png                          usr/lib/grass70/gui/wxpython/tplot/tplot.png
-usr/share/grass70/gui/wxpython/vdigit/vdigit_toolbar.jpg                usr/lib/grass70/gui/wxpython/vdigit/vdigit_toolbar.jpg
+if [ -e debian/grass-gui.image-file-in-usr-lib.list ]; then \
+        while read file; do \
+		share=`echo "$file" | sed 's/debian\/tmp\/usr\/lib\//usr\/share\//'` ; \
+		lib=`echo "$file" | sed 's/debian\/tmp\///'` ; \
+		echo "$share $lib" ; \
+	done < debian/grass-gui.image-file-in-usr-lib.list ; \
+fi
