@@ -32,7 +32,7 @@ templates:
 	dh $@ --with autotools_dev,python2 --parallel
 
 override_dh_clean:
-	dh_clean build-arch-stamp install-arch-stamp
+	dh_clean build-arch-stamp install-arch-stamp debian/grass-gui.image-file-in-usr-lib.list
 
 	$(RM) lib/proj/nad2bin
 	$(RM) tools/timer/main.o
@@ -190,46 +190,18 @@ install-arch-stamp:
 
 	# Move image files from /usr/lib/$(BASE_NAME) to /usr/share/$(BASE_NAME)
 	mkdir -p debian/tmp/usr/share/$(BASE_NAME)/gui
-	mv debian/tmp/usr/lib/$(BASE_NAME)/gui/icons/ debian/tmp/usr/share/$(BASE_NAME)/gui/
+	mv debian/tmp/usr/lib/$(BASE_NAME)/gui/icons/  debian/tmp/usr/share/$(BASE_NAME)/gui/
 	mv debian/tmp/usr/lib/$(BASE_NAME)/gui/images/ debian/tmp/usr/share/$(BASE_NAME)/gui/
 
-	mkdir -p debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/animation
-	mv debian/tmp/usr/lib/$(BASE_NAME)/gui/wxpython/animation/wxGUI_animation_tool.jpg debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/animation/
-	
-	mkdir -p debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/dbmgr
-	mv debian/tmp/usr/lib/$(BASE_NAME)/gui/wxpython/dbmgr/dbmgr_frame.jpg  debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/dbmgr/
+	find debian/tmp/usr/lib/$(BASE_NAME)/gui/wxpython/ -type f \( -name "*.jpg" -or -name "*.png" \) -print | sort > debian/grass-gui.image-file-in-usr-lib.list
 
-	mkdir -p debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/gmodeler
-	mv debian/tmp/usr/lib/$(BASE_NAME)/gui/wxpython/gmodeler/gmodeler_frame.png debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/gmodeler/
-
-	mkdir -p debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/iclass
-	mv debian/tmp/usr/lib/$(BASE_NAME)/gui/wxpython/iclass/iclass_frame.jpg debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/iclass/
-
-	mkdir -p debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/mapswipe
-	mv debian/tmp/usr/lib/$(BASE_NAME)/gui/wxpython/mapswipe/mapswipe_tsunami.jpg debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/mapswipe/
-
-	mkdir -p debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/psmap
-	mv debian/tmp/usr/lib/$(BASE_NAME)/gui/wxpython/psmap/psmap_frame.jpg debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/psmap/
-
-	mkdir -p debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/rlisetup
-	mv debian/tmp/usr/lib/$(BASE_NAME)/gui/wxpython/rlisetup/g_gui_rlisetup_1.png debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/rlisetup/
-	mv debian/tmp/usr/lib/$(BASE_NAME)/gui/wxpython/rlisetup/g_gui_rlisetup_2.png debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/rlisetup/
-	mv debian/tmp/usr/lib/$(BASE_NAME)/gui/wxpython/rlisetup/g_gui_rlisetup_3.png debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/rlisetup/
-	mv debian/tmp/usr/lib/$(BASE_NAME)/gui/wxpython/rlisetup/g_gui_rlisetup_4.png debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/rlisetup/
-	mv debian/tmp/usr/lib/$(BASE_NAME)/gui/wxpython/rlisetup/g_gui_rlisetup_5.png debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/rlisetup/
-	mv debian/tmp/usr/lib/$(BASE_NAME)/gui/wxpython/rlisetup/g_gui_rlisetup_6.png debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/rlisetup/
-	mv debian/tmp/usr/lib/$(BASE_NAME)/gui/wxpython/rlisetup/g_gui_rlisetup_7.png debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/rlisetup/
-	mv debian/tmp/usr/lib/$(BASE_NAME)/gui/wxpython/rlisetup/g_gui_rlisetup_8.png debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/rlisetup/
-	mv debian/tmp/usr/lib/$(BASE_NAME)/gui/wxpython/rlisetup/g_gui_rlisetup_sample_areas.png debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/rlisetup/
-
-	mkdir -p debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/timeline
-	mv debian/tmp/usr/lib/$(BASE_NAME)/gui/wxpython/timeline/timeline_2D.jpg debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/timeline/
-
-	mkdir -p debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/tplot
-	mv debian/tmp/usr/lib/$(BASE_NAME)/gui/wxpython/tplot/tplot.png debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/tplot/
-
-	mkdir -p debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/vdigit
-	mv debian/tmp/usr/lib/$(BASE_NAME)/gui/wxpython/vdigit/vdigit_toolbar.jpg debian/tmp/usr/share/$(BASE_NAME)/gui/wxpython/vdigit/
+	while read file; do \
+		dir=`dirname "$$file" | sed 's/usr\/lib\//usr\/share\//'` ; \
+		if [ ! -e "$$dir" ]; then \
+			mkdir -p "$$dir" ; \
+		fi ; \
+		mv "$$file" "$$dir" ; \
+	done < debian/grass-gui.image-file-in-usr-lib.list
 
 	touch $@
 
